k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 361769558141.dkr.ecr.us-east-2.amazonaws.com/backend:latest  # Replace with your image tag if necessary
          ports:
            - containerPort: 5000  # Assuming Flask is running on port 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP  # or LoadBalancer if you want external access
