k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 361769558141.dkr.ecr.us-east-2.amazonaws.com/frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80  # Assuming Nginx is running on port 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP  # or LoadBalancer if you want external access
