k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-ingress
  namespace: default  # Replace with your service's namespace
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
 # This annotation tells cert-manager to use the ClusterIssuer
spec:
  rules:
  - host: vmmanagers.com  # Frontend service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: api.vmmanagers.com  # Backend service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
  # Define the TLS configuration to enable HTTPS
  tls:
  - hosts:
    - vmmanagers.com
    - api.vmmanagers.com
    secretName: vmmanagers-tls
